[package]
name = "dex_parser"
version = "0.1.0"
authors = ["Julien Gamba <julien@jgamba.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
nom = "6.1.2"
zip = "0.5.12"
argparse = "0.2.2"
leb128 = "0.2.1"
residua-mutf8 = "0.4.2"
